+Partially fixed the bug with firefox mobile that cause the web to shrink too much when virtual keyboard appear. +Fixed the bug with chrome mobile where sidebar didn't use 100% of device height as it height.

--- a/css/article-editor/article-editor.scss
+++ b/css/article-editor/article-editor.scss
@@ -1,7 +1,8 @@
 @mixin article-editor-scss {
     .article-content-wrapper{
-        min-height: 75vh;
+        min-height: 200px;
         width: 100%;
+        margin: 15px 0;
         display: flex;
         flex-direction: row;
         align-items: center;
